--- a/Css/style.css
+++ b/Css/style.css
@@ -1,51 +1,63 @@
-
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
 * {
-    font-size: 62.5%;
+  margin: 0;
+  padding: 0;
+  font-size: 62.5%;
 }
 
 /*Variables*/
 :root {
-    /*Gama de colores*/
-    --color_primario: #6307da;
-    --color_secundario: #f94343;
-    --color_blanco: #ffffff;
-    --color_negro: #000000;
+  /*Gama de colores*/
+  --color_primario: #6307da;
+  --color_primario_ligth:  #af7af4;
+  --color_secundario: #f94343;
+  --color_blanco: #ffffff;
+  --color_negro: #000000;
 }
 
 /*Estilos principales*/
+body {
+    background-image: linear-gradient(
+      to left,
+      var(--color_negro),
+      var(--color_primario)
+    );
+}
 h1 {
-    font-size: 5rem;
-    color: var(--color_primario);
-    text-align: center;
+  font-size: 6rem;
+  color: var(--color_primario_ligth);
+  text-align: center;
+  padding: 4rem 0;
 }
 
 a {
-    font-size: 1.8rem;
-    text-decoration: none;
-    color: var(--color_secundario);
+  font-size: 1.8rem;
+  text-decoration: none;
+  color: var(--color_primario_ligth);
+  padding: 1rem;
 }
 
 /*Estilos*/
 .header {
-max-width: 1200px;
-margin: 0 auto;
- & h1 {
+  max-width: 1200px;
+  margin: 0 auto;
+  & h1 {
     width: 100%;
- }
+  }
 }
 
 .barra_navegacion {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
 }
