--- a/Css/style.css
+++ b/Css/style.css
@@ -18,20 +18,55 @@ html {
 :root {
   /*Gama de colores*/
   --color_primario: #6307da;
-  --color_primario_ligth:  #af7af4;
+  --color_primario_ligth: #af7af4;
   --color_secundario: #f94343;
   --color_blanco: #ffffff;
   --color_negro: #000000;
+  --color_verde: #06fa7c;
 }
 
 /*Estilos principales*/
-body {
-    background-image: linear-gradient(
-      to left,
-      var(--color_negro),
-      var(--color_primario)
-    );
+.original {
+  background-image: linear-gradient(
+    to left,
+    var(--color_negro),
+    var(--color_primario)
+  );
 }
+.green {
+  background-image: linear-gradient(
+    to left,
+    var(--color_negro),
+    var(--color_verde)
+  );
+  & h1 {
+    font-size: 6rem;
+    color: var(--color_blanco);
+    text-align: center;
+    padding: 4rem 0;
+  }
+  a {
+    font-size: 1.8rem;
+    text-decoration: none;
+    color: var(--color_blanco);
+    padding: 1rem;
+  }
+  .tema button {
+    width: 8rem;
+    height: 2.6rem;
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+    background-color: var(--color_blanco);
+    opacity: 0.6;
+    border: none;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+  }
+}
+
 h1 {
   font-size: 6rem;
   color: var(--color_primario_ligth);
@@ -52,6 +87,31 @@ a {
   margin: 0 auto;
   & h1 {
     width: 100%;
+  }
+  .titulo {
+    display: grid;
+    grid-template-columns: 87% 12%;
+  }
+}
+.tema {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: start;
+  & button {
+    width: 8rem;
+    height: 2.6rem;
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+    background-color: var(--color_primario_ligth);
+    opacity: 0.6;
+    border: none;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
   }
 }
 
