--- a/Css/style.css
+++ b/Css/style.css
@@ -20,6 +20,7 @@ html {
   --color_primario: #6307da;
   --color_primario_ligth: #af7af4;
   --color_secundario: #f94343;
+  --color_secundario_ligth: #f57575;
   --color_blanco: #ffffff;
   --color_negro: #000000;
   --color_verde: #06fa7c;
@@ -57,6 +58,40 @@ html {
     font-size: 1.5rem;
     margin-top: 1.5rem;
     background-color: var(--color_blanco);
+    opacity: 0.6;
+    border: none;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+  }
+}
+
+.red {
+  background-image: linear-gradient(
+    to left,
+    var(--color_negro),
+    var(--color_secundario)
+  );
+  & h1 {
+    font-size: 6rem;
+    color: var(--color_secundario_ligth);
+    text-align: center;
+    padding: 4rem 0;
+  }
+  a {
+    font-size: 1.8rem;
+    text-decoration: none;
+    color: var(--color_secundario_ligth);
+    padding: 1rem;
+  }
+  .tema button {
+    width: 8rem;
+    height: 2.6rem;
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+    background-color: var(--color_secundario_ligth);
     opacity: 0.6;
     border: none;
     border-radius: 4px;
